scripts/nullaway/original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8.txt
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/meta/WavePath.java:61: error: [NullAway] @NonNull field type not initialized
	private String type;
	               ^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/meta/WaveInfo.java:36: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		waveEnemy.setPaths(Action.construct(null, actions));
		                                    ^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/meta/WaveEnemy.java:25: error: [NullAway] @NonNull field key not initialized
	private String key;
	               ^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/meta/WaveEnemy.java:27: error: [NullAway] @NonNull field Paths not initialized
	private List<WavePath> Paths;
	                       ^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Rectangle.java:28: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Eight.java:18: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/CrossAndUp.java:19: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/meta/LevelInfo.java:17: error: [NullAway] @NonNull field Name not initialized
	private String Name;
	               ^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/meta/LevelInfo.java:21: error: [NullAway] @NonNull field Password not initialized
	private String Password;
	               ^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/meta/LevelInfo.java:23: error: [NullAway] @NonNull field Waves not initialized
	private List<WaveInfo> Waves;
	                       ^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Bounce.java:22: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/ZigZag.java:27: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Circle.java:31: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Hexagon.java:33: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/FrenzyTurn.java:25: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/meta/EnemyInfo.java:17: error: [NullAway] @NonNull field key not initialized
	private String key;
	               ^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/meta/EnemyInfo.java:20: error: [NullAway] @NonNull field Weapon not initialized
	private String Weapon;
	               ^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/meta/EnemyList.java:16: error: [NullAway] @NonNull field list not initialized
	private List<EnemyInfo> list;
	                        ^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/meta/WeaponInfo.java:20: error: [NullAway] @NonNull field FireSound not initialized
	private String FireSound;
	               ^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/meta/WeaponInfo.java:22: error: [NullAway] @NonNull field key not initialized
	private String key;
	               ^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/meta/WeaponList.java:16: error: [NullAway] @NonNull field list not initialized
	private List<WeaponInfo> list;
	                         ^
    (see http://t.uber.com/nullaway )
../original/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/meta/LevelList.java:16: error: [NullAway] @NonNull field List not initialized
	private List<LevelInfo> List;
	                        ^
    (see http://t.uber.com/nullaway )
22 errors
